# hublab

./: .env.example  .env.production  .eslintrc.json  .gitignore  ACCESSIBILITY_IMPROVEMENTS.md  AI_INTEGRATION_IMPROVEMENTS.md  AI_ONLY_NOTICE.md  AI_QUICK_START.md  AI_USAGE_GUIDE.md  AMBIENT_AGENT_CRM_ARCHITECTURE.md  API_COMPLETE_REFERENCE.md  API_EXAMPLES.md  API_SETUP_INSTRUCTIONS.md  ARCHITECTURE.md  BACKEND_IMPLEMENTATION_SUMMARY.md  BACKEND_README.md  BLOCKS_SYSTEM.md  CAPSULES_COMPLETE.md  CAPSULE_AUDIT_REPORT.md  CAPSULE_COMPILER_TEST_RESULTS.md  CHANGELOG.md  CHATGPT_PLUGIN_SETUP.md  CHECKLIST.md  CLAUDE_SELF_IMPROVEMENT.md  CODE_QUALITY_ANALYSIS.md  CODE_REVIEW_REPORT.md  CONFIGURAR_AUTODEPLOY.md  CONVERSION_SUMMARY.md  CRM_IMPLEMENTATION_SUMMARY.md  CRM_UI_DESIGN.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  DEPLOY_INSTRUCTIONS.md  DOCUMENTATION.md  FOR_AI_ASSISTANTS.md  FRONTEND_COMPLETE.md  FRONTEND_INTEGRATION_GUIDE.md  (+91 more)
.github/: AI_GUIDE.md  README.md
.netlify/: netlify.toml
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  (+4 more)
rust-engine/: .dockerignore  .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  render.yaml
rust-engine/benches/: search.rs
rust-engine/docker/: README.md  build-and-test.sh
rust-engine/src/: lib.rs
rust-engine/src/index/: mod.rs
rust-engine/src/loader/: mod.rs
rust-engine/src/models/: capsule.rs  mod.rs
rust-engine/src/search/: mod.rs
rust-engine/tests/: edge_cases_test.rs  integration_tests.rs  property_tests.rs
(+567 files in other folders)
