[package]
name = "hublab-engine"
version = "0.1.0"
edition = "2021"
authors = ["HubLab Team"]
description = "High-performance Rust search engine for HubLab capsules"
license = "MIT"

[[bin]]
name = "hublab"
path = "src/bin/cli.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# String similarity for fuzzy search
strsim = "0.11"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime (for server)
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "search"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
